cabal-version: 2.2

name:        barnsley-fern
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/barnsley-fern
bug-reports: https://github.com/evanrelf/barnsley-fern/issues
license:     ISC
copyright:   2020 Evan Relf
build-type:  Simple


--------------------------------------------------------------------------------
-- Common
--------------------------------------------------------------------------------


common common
  build-depends:
    , base ^>= 4.12.0.0
    , relude ^>= 0.6.0.0
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Unsafe)
  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common execuable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


--------------------------------------------------------------------------------
-- Libraries
--------------------------------------------------------------------------------


library
  import: common
  hs-source-dirs: src
  exposed-modules:
    BarnsleyFern
  build-depends:
    , diagrams-contrib
    , diagrams-core
    , diagrams-lib
    , diagrams-rasterific
    , random


--------------------------------------------------------------------------------
-- Executables
--------------------------------------------------------------------------------


executable barnsley-fern
  import: common, execuable
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    , barnsley-fern


--------------------------------------------------------------------------------
-- Tests
--------------------------------------------------------------------------------


test-suite test
  import: common, execuable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , barnsley-fern
